--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "dependencies": {
         "elm": "^0.18.0",
         "elm-test": "^0.18.3"
+    },
+    "devDependencies": {
+        "elm-check-updates": "^1.2.2"
     }
 }
