--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "elm-test": "^0.18.3"
     },
     "devDependencies": {
-        "elm-check-updates": "^1.2.2"
+        "elm-check-updates": "^1.2.2",
+        "elm-analyse": "^0.13.3"
     }
 }
